--- a/Ankand/Properties/launchSettings.json
+++ b/Ankand/Properties/launchSettings.json
@@ -29,7 +29,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Account/Login",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
